support language level 8: change Set.of to ImmutableSet.of